# AINT

./: README.md
2023-1/CMPS1131-Principles of Programming I/: Array  Average of 10 grades.cpp  Classwork 1.cpp  Commission (Salary Calculator)  For Loop 2.cpp  For Loop.cpp  How to Write a Class  Nested For loop (Left Angled Triangle)  Output numbers 1-5 with a while loop.cpp  Practice 4  Practice 5.cpp  Practice 6  PrintTriangle  Salary Calculator.cpp  Test 1  Test 2 Pt 1  Test 2 Pt 2  Test 2 Pt 3.cpp  Test 3 Pt 1  Test 3 Pt 2.cpp  Upside Down, Left Angled Triangle.cpp  from for loop to while loop  print multiples of 5 up to a hundred.cpp  print out all the odd numbers from 1-50.cpp
2023-2/CMPS1171-Introduction to Databases/: 5 files- UB IT Students.xlsx  =IF(ROW(D15)-ROW($D$3)+1=793, INDEX.txt  =TRANSPOSE(ARRAYFORMULA(SPLIT(REPT(.txt  Advisors.csv  Algebra Course Description.txt  Calculus I Course Description.txt  College English I Course Description.txt  College English II Course Description.txt  Courses - CoursesTable.csv  Courses.csv  Critical Thinking Course Description.txt  DDL  DDL for Project 2.txt  Ethics Course Description.txt  Grades - GradesTable.csv  Grades.csv  In Class Task - 4-4-2024.txt  Interesting queries.txt  Quiz 1.txt  RUDY COPY TEST SCORES ONE FILE (1).xlsx  Semester (1).csv  Students - StudentTable.csv  Trigonometry Course Description.txt  Users.csv  project #1.txt  quiz #2.txt  quiz #3.txt  quiz #4.txt  quiz #5 pt B.txt  quiz #5.txt  test #1.txt
2024-1/CMPS2131-Data Structures/Wk 3/Thur/: CMakeLists.txt  main.cpp
(+92 files in other folders)
